<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.TaskDetailsFragment">
    <TextView
            android:id="@+id/tv_details_task_title"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HeadingTextView"/>
    <TextView
            android:id="@+id/tv_details_task_description"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_details_task_title"
            app:layout_constraintRight_toRightOf="@id/tv_details_task_title"
            app:layout_constraintTop_toBottomOf="@id/tv_details_task_title"
            android:layout_marginTop="@dimen/marginLarge"/>
    <ImageView
            android:id="@+id/img_details_priority_view"
            android:layout_width="@dimen/detailsPriorityWidth"
            android:layout_height="@dimen/detailsPriorityHeight"
            app:layout_constraintLeft_toLeftOf="@id/tv_details_task_title"
            app:layout_constraintRight_toRightOf="@id/tv_details_task_title"
            app:layout_constraintTop_toBottomOf="@id/tv_details_task_description"
            android:contentDescription="@string/picture_description"/>

    <TextView android:id="@+id/tv_edit_task"
              android:text="@string/text_edit_task"
              android:layout_marginBottom="12dp"
              style="@style/HeadingTextView"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/img_details_priority_view"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/et_edit_task_title"
              android:hint="@string/hint_edit_task_title"
              android:layout_marginBottom="12dp"
              app:layout_constraintTop_toBottomOf="@+id/tv_edit_task"
              tools:ignore="Autofill"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"/>

    <EditText android:id="@+id/et_edit_task_description"
              android:hint="@string/hint_edit_task_description"
              android:layout_marginBottom="12dp"
              tools:ignore="Autofill"
              app:layout_constraintTop_toBottomOf="@+id/et_edit_task_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"/>

    <Spinner android:id="@+id/spinner_edit_priority"
             android:layout_marginTop="12dp"
             android:entries="@array/priorities"
             app:layout_constraintTop_toBottomOf="@+id/et_edit_task_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
    
    <Button android:id="@+id/btn_save_task"
            android:text="@string/btn_text_save_changes"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_edit_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>